# clingo-dl-theory-rs

./: .gitmodules  Cargo.toml  README.md  bindings.rs  build.rs  lib.rs
.github/workflows/: ci-tests.yml
clingo-dl-plugin/: Cargo.toml
clingo-dl-plugin/src/: lib.rs
clingo-dl-sys/: Cargo.toml  README.md  bindings.rs  build.rs
