[package]
name = "clingo-dl-plugin"
version = "0.0.0"
authors = ["Sven Thiele <sthiel78@gmail.com>"]
description = "A clingo theory plugin for difference logic."
edition = "2018"
license = "MIT"
repository = "https://github.com/potassco/clingo-dl-sys"
# documentation = "https://docs.rs/clingo-dl-plugin"

[dependencies]
clingo = "0.7.0"
clingo-sys = "0.7.0"
clingo-dl-sys = { path = "../clingo-dl-sys"}

[lib]
crate-type = ["cdylib", "rlib"] 
