[package]
name = "clingo-dl-sys"
version = "0.0.0"
authors = ["sthiele <sthiele78@gmail.com>"]
edition = "2018"
description = "Raw FFI bindings to the C API of the clingo-dl library"
categories = ["external-ffi-bindings"]
build = "build.rs"
links = "clingo-dl"
license = "MIT"
repository = "https://github.com/potassco/clingo-dl-sys"
# documentation = "https://docs.rs/clingo-dl-sys"
readme = "README.md"

# [features]
# static-linking = []

[lib]
name = "clingo_dl_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"
clingo-sys = "0.7.0"

[build-dependencies]
cmake = "0.1"
bindgen = "0.57"
